--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -1,3 +1,24 @@
 {
-  "message": "sa"
+  "navbar": {
+    "link": {
+      "home": "Ana Sayfa",
+      "dashboard": "Panel",
+      "profile": "Profil",
+      "logIn": "Giriş",
+      "logOut": "Çıkış Yap",
+      "register": "Üye Ol"
+    },
+    "dropdown": {
+      "lang": "Dil",
+      "user": "Kullanıcı"
+    }
+  },
+  "modal": {
+    "logIn": {
+      "title": "Giriş Yap"
+    },
+    "register": {
+      "title": "Üye Ol"
+    }
+  }
 }
