refactor: change layout name from AdminLayout to DashboardLayout

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -12,6 +12,7 @@
     "required": " is required"
   },
   "navbar": {
+    "welcomeUser": "@:common.welcome {user}",
     "link": {
       "home": "Home",
       "dashboard": "Dashboard",
