feat: create profile settings forms and layouts

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -125,5 +125,8 @@
       "alias": "Alias",
       "type": "Type"
     }
+  },
+  "userSettings": {
+    "pageTitle": "User Setting | User Settings"
   }
 }
