--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -125,6 +125,8 @@
     }
   },
   "userSettings": {
-    "pageTitle": "Kullanıcı Ayarları | Kullanıcı Ayarları"
+    "pageTitle": "Kullanıcı Ayarları | Kullanıcı Ayarları",
+    "general": "Genel Ayarlar",
+    "password": "Şifre Ayarları"
   }
 }
