feat: localize home page

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -131,5 +131,8 @@
     "pageTitle": "User Setting | User Settings",
     "general": "General Settings",
     "password": "Password Setting"
+  },
+  "hero": {
+    "slogan": "We are watching it for you!"
   }
 }
