--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -49,7 +49,7 @@
     "modal": {
       "title": "@:common.logIn",
       "submitBtn": "@:common.logIn",
-      "registerBtn": "Şimdi @:common.register!",
+      "registerBtn": "Hemen @:common.register!",
       "callToAction": "Henüz bir hesabınız yok mu?"
     },
     "form": {
@@ -132,5 +132,8 @@
     "pageTitle": "Kullanıcı Ayarları | Kullanıcı Ayarları",
     "general": "Genel Ayarlar",
     "password": "Şifre Ayarları"
+  },
+  "hero": {
+    "slogan": "Sizin için izliyoruz!"
   }
 }
